...
        android:paddingBottom="6dp"
        android:paddingTop="24dp"
        android:splitMotionEvents="false"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/fileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@android:color/background_light"
            android:clickable="true"
            android:focusable="true"
...
                android:text="@string/ids_lbl_select_document"
                android:textColor="@color/theme_color_1"
                android:textSize="@dimen/font_size_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/photosButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@android:color/background_light"
            android:clickable="true"
            android:focusable="true"
...
                android:textColor="@color/theme_color_1"
                android:textSize="@dimen/font_size_large" />
        </LinearLayout>

        <!-- aLINK edit: HIDE_NEW_FEATURES: Capture Photo function is hidden. Hide camera permission declaration >
        <LinearLayout
            android:id="@+id/cameraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@android:color/background_light"
            android:clickable="true"
            android:focusable="true"
...
