<?xml version="1.0" encoding="utf-8"?>

<!-- 
<android.support.v4.widget.DrawerLayout
 -->
<jp.co.riso.smartdeviceapp.view.widget.SDADrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <FrameLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <FrameLayout
        android:id="@+id/leftLayout"
        android:layout_width="@dimen/drawer_width_max"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical" >
    </FrameLayout>
    
    <FrameLayout
        android:id="@+id/rightLayout"
        android:layout_width="@dimen/drawer_width_max"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical" >
    </FrameLayout>
    
</jp.co.riso.smartdeviceapp.view.widget.SDADrawerLayout>