...
                android:layout_height="@dimen/printers_row_height"
                android:layout_marginLeft="@dimen/printers_sub_separator_padding"
                android:layout_marginRight="@dimen/printers_sub_separator_padding"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/inputIpAddress"
                    style="@style/SDAEditText"
                    android:inputType="textVisiblePassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/printers_row_left_icon_margin"
...
                    android:layout_marginLeft="@dimen/printers_row_right_margin"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/img_save_button"
                    android:layout_width="@dimen/printers_row_right_icon_size"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginLeft="@dimen/printers_row_right_margin"
                    android:layout_weight="0"
                    android:contentDescription="@string/default_content_description"
...
